[build-system]
build-backend = 'mesonpy'
requires = [
    "meson-python>=0.12.1",
    "ninja>=1.8.2",
    "Cython>=0.29.35",
    "pybind11>=2.10.4",
    "numpy"
]

[project]
name = "radiation_unit_conversion"
version = "0.1"
description = "Convert between different radiation units"
authors = [
    {name = "Evert Nasedkin", email = "nasedkinevert@gmail.com"},
]
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Fortran",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy"
]
dependencies = [
    "meson-python",
    "ninja",
    "numpy",
]

[project.urls]
Documentation = "https://petitradtrans.readthedocs.io/en/latest/"
Repository = "https://gitlab.com/mauricemolli/petitRADTRANS"
Issues = "https://gitlab.com/mauricemolli/petitRADTRANS/-/issues"
Changelog = "https://gitlab.com/mauricemolli/petitRADTRANS/-/blob/master/CHANGELOG.md"

test = [
    "build",
    "wheel",
    "pytest",
    "pytest-cov",
    "mpi4py",
]

[tool.flake8]
max-line-length = 120

[tool.pytest]
norecursedirs = [
    ".tox",
    "build",
    "petitRADTRANS",
    "testing",
]

#[tool.tox]  # TODO add when tox fully supports toml, for now setup is in setup.cfg
#legacy_tox_ini = """"""
