[build-system]
build-backend = 'mesonpy'
requires = [
    "meson-python>=0.12.1",
    "ninja>=1.8.2",
    "Cython>=0.29.35",
    "pybind11>=2.10.4",
    "numpy"
]

[project]
name = "radiation_unit_conversion"
version = "0.1"
description = "Convert between different radiation units"
authors = [
    {name = "Evert Nasedkin", email = "nasedkinevert@gmail.com"},
]
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy"
]
dependencies = [
    "meson-python",
    "ninja",
    "numpy",
    "astropy",
    "unittest"
]

[project.urls]
Repository = "https://github.com/nenasedk/radiation_unit_conversion/tree/main"
Issues = "https://github.com/nenasedk/radiation_unit_conversion/issues"
Changelog = "https://github.com/nenasedk/radiation_unit_conversion/blob/main/CHANGELOG.md"

test = [
    "build",
    "wheel",
    "pytest",
    "pytest-cov",
]

[tool.flake8]
max-line-length = 120

[tool.pytest]
norecursedirs = [
    ".tox",
    "build",
    "radiation_unit_conversion",
]

#[tool.tox]  # TODO add when tox fully supports toml, for now setup is in setup.cfg
#legacy_tox_ini = """"""
